5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1670_2966.log
== TEST (2019-04-16 18:09:50) 
-- CODE:
ingresso=("valor integral")

-- ERROR:
File "XXXX", line 2
    qvb=float(input("quantidade de votos bomelza
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:30) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=(valor integral//200)



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=(valor integral//200)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:54) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=float(input(valor integral//200))



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=float(input(valor integral//200))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:02) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=float(input(valor integral//200))



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=float(input(valor integral//200))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:45:15) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=float(input(valor integral/200))



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- EXECUTION TIME:
0.190189
-- ERROR:
  File "/home/codebench/codes/1670/2966/main.py", line 3
    desconto=float(input(valor integral/200))
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:17) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=float(input(valor integral/200))



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=float(input(valor integral/200))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:34) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=float(input(valor integral//20))



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=float(input(valor integral//20))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:48) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(valor integral//20)



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=input(valor integral//20)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:09) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(ingresso//200)



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 7
    if (mulheres=desconto):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:27) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(ingresso//200=mulheres)



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 7
    if (mulheres=desconto):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:59) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(ingresso//200)
mulheres=


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 4
    mulheres=
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:03) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(ingresso//20)
mulheres=


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 4
    mulheres=
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:13) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
desconto=input(ingresso//200)



if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 7
    if (mulheres=desconto):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:25) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
mulheres=input(ingresso//200)


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(mulheres, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    mensagem ("S")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:48:37) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral"))
mulheres=input(ingresso//200)


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(mulheres, 2))
-- EXECUTION TIME:
0.145948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2966/main.py", line 7, in <module>
    mensagem ("S")
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:49:15) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=input(ingresso//200)


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- EXECUTION TIME:
0.142726
-- ERROR:
  File "/home/codebench/codes/1670/2966/main.py", line 3
    desconto=input(ingresso//200)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:05) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=input(ingresso//200)


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=input(ingresso//200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:24) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=input("ingresso//200")


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:41) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=input("ingresso//200")


if (mulheres):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:04) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=ingresso//200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=ingresso//200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:11) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= ingresso//200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= ingresso//200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:17) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= ingresso/200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= ingresso/200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:29) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= ingresso/200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= ingresso/200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:18) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= ingresso/200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= ingresso/200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:26) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= ingresso/200


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= ingresso/200
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:46) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto= float(ingresso/200)


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto= float(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:54) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=(ingresso/200)


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:19) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=(ingresso/200)


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:53:58) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=input("ingresso/200")


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=input()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:54:40) 
-- CODE:
quantidade=input("quantidade de ing")
ingresso=float(input("valor integral")
desconto=(ingresso/200)
mulher=(recebe_desconto)


if (mulheres=desconto):
	mensagem ("S")
	print(mensagem)
else:
	mensagem("N")
	print(mensagem)

print(quantidade)
print(round(ingresso, 2))
desconto(round(desconto, 2))
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
